<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6c0404">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mon"
        android:id="@+id/btnMon"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickMon" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tue"
        android:id="@+id/btnTue"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickTue" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:id="@+id/btnWed"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickWed" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thu"
        android:id="@+id/btnThu"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickThu" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fri"
        android:id="@+id/btnFri"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickFri" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        android:id="@+id/btnSat"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickSat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        android:id="@+id/btnSun"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickSun" />

</LinearLayout>